cmake_minimum_required(VERSION 3.15)
project(caladan)

set(CMAKE_CXX_STANDARD 17)

include_directories(bindings/cc)
include_directories(inc)
include_directories(/lib/modules/4.15.0-109-generic/build/include)
include_directories(/usr/src/linux-headers-4.15.0-109/arch/x86/include/)
include_directories(dpdk/config)
include_directories(dpdk/lib/librte_net)
include_directories(dpdk/lib/librte_mbuf)
include_directories(dpdk/lib/librte_eal/common/include)
include_directories(dpdk/lib/librte_eal/common/include/arch/x86)
include_directories(dpdk/lib/librte_ethdev)
#include_directories(/usr/include/dpdk/)

add_compile_definitions(IOKERNEL_STATS)
add_compile_definitions(RUNTIME_STATS)

add_executable(caladan
        apps/bench/callibrate.cc
        apps/bench/efficiency.cc
        apps/bench/efficiency_linux.cc
        apps/bench/fake_worker.cc
        apps/bench/fake_worker.h
        apps/bench/flash_client.cc
        apps/bench/linux_mech_bench.cc
        apps/bench/memcached_router.cc
        apps/bench/netbench.cc
        apps/bench/netbench2.cc
        apps/bench/netbench_linux.cc
        apps/bench/netbench_udp.cc
        apps/bench/netperf.cc
        apps/bench/proto.h
        apps/bench/RpcManager.cc
        apps/bench/RpcManager.h
        apps/bench/storage_bench.cc
        apps/bench/stress.cc
        apps/bench/stress_linux.cpp
        apps/bench/tbench.cc
        apps/dpdk_netperf/dpdk_netperf.c
        apps/netbench/distribution.cc
        apps/netbench/distribution.h
        apps/netbench/interference.cc
        apps/netbench/netbench.cc
        apps/netbench/stress.cc
        apps/netbench/stress_linux.cc
        apps/netbench/stress_shm.cc
        apps/netbench/stress_shm_query.cc
        apps/netbench/synthetic_worker.cc
        apps/netbench/synthetic_worker.h
        apps/netbench/util.cc
        apps/netbench/util.h
        apps/shuffle/cluster.cc
        apps/shuffle/shuffle_node.cc
        apps/shuffle/shuffle_tcp.cc
        apps/shuffle/shuffle_udp.cc
        apps/shuffle/options.cc
        apps/shuffle/workload.cc
        apps/spdk_perf/perf.c
        apps/storage_service/reflex.h
        apps/storage_service/storage_server.cc
        apps/stream/stream.cc
        apps/stream/stream_query.cc
        apps/streamcluster/parsec_barrier.cpp
        apps/streamcluster/parsec_barrier.hpp
        apps/streamcluster/streamcluster.cpp
        base/bitmap.c
        base/cpu.c
        base/init.c
        base/init_internal.h
        base/jenkins_hash.c
        base/list.c
        base/log.c
        base/lrpc.c
        base/mem.c
        base/mempool.c
        base/page.c
        base/pci.c
        base/slab.c
        base/stat.c
        base/sysfs.c
        base/tcache.c
        base/thread.c
        base/time.c
        base/timetrace.c
        bindings/cc/macros.h
        bindings/cc/net.h
        bindings/cc/runtime.cc
        bindings/cc/runtime.h
        bindings/cc/sync.h
        bindings/cc/test.cc
        bindings/cc/thread.cc
        bindings/cc/thread.h
        bindings/cc/timer.h
        bindings/rust/shenango.h
        breakwater/apps/netbench/netbench.cc
        breakwater/apps/netbench/synthetic_worker.cc
        breakwater/apps/netbench/synthetic_worker.h
        breakwater/apps/netbench/util.cc
        breakwater/apps/netbench/util.h
        breakwater/bindings/cc/inc/breakwater/rpc++.h
        breakwater/bindings/cc/rpc++.cc
        breakwater/inc/breakwater/breakwater.h
        breakwater/inc/breakwater/dagor.h
        breakwater/inc/breakwater/nocontrol.h
        breakwater/inc/breakwater/rpc.h
        breakwater/inc/breakwater/seda.h
        breakwater/src/bw_client.c
        breakwater/src/bw_config.h
        breakwater/src/bw_proto.h
        breakwater/src/bw_server.c
        breakwater/src/dg_client.c
        breakwater/src/dg_config.h
        breakwater/src/dg_proto.h
        breakwater/src/dg_server.c
        breakwater/src/nc_client.c
        breakwater/src/nc_config.h
        breakwater/src/nc_proto.h
        breakwater/src/nc_server.c
        breakwater/src/sd_client.c
        breakwater/src/sd_config.h
        breakwater/src/sd_proto.h
        breakwater/src/sd_server.c
        breakwater/src/util.c
        breakwater/src/util.h
        inc/asm/atomic.h
        inc/asm/chksum.h
        inc/asm/cpu.h
        inc/asm/ops.h
        inc/base/assert.h
        inc/base/atomic.h
        inc/base/bitmap.h
        inc/base/byteorder.h
        inc/base/compiler.h
        inc/base/cpu.h
        inc/base/gen.h
        inc/base/hash.h
        inc/base/init.h
        inc/base/kref.h
        inc/base/limits.h
        inc/base/list.h
        inc/base/lock.h
        inc/base/log.h
        inc/base/lrpc.h
        inc/base/mem.h
        inc/base/mempool.h
        inc/base/page.h
        inc/base/pci.h
        inc/base/slab.h
        inc/base/stat.h
        inc/base/stddef.h
        inc/base/sysfs.h
        inc/base/tcache.h
        inc/base/thread.h
        inc/base/time.h
        inc/base/types.h
        inc/iokernel/control.h
        inc/iokernel/queue.h
        inc/iokernel/shm.h
        inc/net/arp.h
        inc/net/chksum.h
        inc/net/ethernet.h
        inc/net/icmp.h
        inc/net/ip.h
        inc/net/mbuf.h
        inc/net/mbufq.h
        inc/net/ping.h
        inc/net/tcp.h
        inc/net/udp.h
        inc/runtime/gc.h
        inc/runtime/net.h
        inc/runtime/poll.h
        inc/runtime/preempt.h
        inc/runtime/rcu.h
        inc/runtime/rculist.h
        inc/runtime/runtime.h
        inc/runtime/smalloc.h
        inc/runtime/storage.h
        inc/runtime/sync.h
        inc/runtime/tcp.h
        inc/runtime/thread.h
        inc/runtime/timer.h
        inc/runtime/udp.h
        iokernel/commands.c
        iokernel/control.c
        iokernel/defs.h
        iokernel/dp_clients.c
        iokernel/dpdk.c
        iokernel/hw_timestamp.c
        iokernel/hw_timestamp.h
        iokernel/ias.c
        iokernel/ias.h
        iokernel/ias_bw.c
        iokernel/ias_ht.c
        iokernel/ksched.c
        iokernel/ksched.h
        iokernel/main.c
        iokernel/mempool_completion.c
        iokernel/mlx.h
        iokernel/numa.c
        iokernel/pcm.h
        iokernel/pmc.h
        iokernel/ref.h
        iokernel/rx.c
        iokernel/sched.c
        iokernel/sched.h
        iokernel/simple.c
        iokernel/stat.c
        iokernel/tx.c
        ksched/ksched.c
        ksched/ksched.h
        net/mbuf.c
        net/netdump.c
        runtime/net/directpath/mlx5/mlx5.h
        runtime/net/directpath/mlx5/mlx5_flow.c
        runtime/net/directpath/mlx5/mlx5_ifc.h
        runtime/net/directpath/mlx5/mlx5_init.c
        runtime/net/directpath/mlx5/mlx5_rxtx.c
        runtime/net/directpath/common.c
        runtime/net/directpath/defs.h
        runtime/net/arp.c
        runtime/net/core.c
        runtime/net/defs.h
        runtime/net/icmp.c
        runtime/net/ping.c
        runtime/net/tcp.c
        runtime/net/tcp.h
        runtime/net/tcp_debug.c
        runtime/net/tcp_in.c
        runtime/net/tcp_out.c
        runtime/net/transport.c
        runtime/net/udp.c
        runtime/net/waitq.h
        runtime/cfg.c
        runtime/defs.h
        runtime/gc.c
        runtime/init.c
        runtime/ioqueues.c
        runtime/kthread.c
        runtime/poll.c
        runtime/preempt.c
        runtime/rcu.c
        runtime/sched.c
        runtime/smalloc.c
        runtime/softirq.c
        runtime/stack.c
        runtime/stat.c
        runtime/cpu.c
        runtime/ustat.c
        runtime/storage.c
        runtime/sync.c
        runtime/timer.c
        scripts/cstate.c
        scripts/spin.cc
        shim/entry.c
        shim/mem.c
        shim/pthread.c
        shim/sleep.c
        shim/sync.c
        tests/netperf.c
        tests/test_base_gen.c
        tests/test_base_hello.c
        tests/test_base_lrpc.c
        tests/test_base_thread.c
        tests/test_kthread_attach.c
        tests/test_kthread_wakeup.c
        tests/test_many_threads.c
        tests/test_multiple_runtimes.c
        tests/test_ping.c
        tests/test_runtime_mutexes.c
        tests/test_runtime_rcu.c
        tests/test_runtime_smalloc.c
        tests/test_runtime_threads.c
        tests/test_runtime_timer.c
        tests/test_storage.c
        tests/test_storage_iops.c)
